// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3ID DID Resolver adds IDX root as service 1`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyiuh3f97hqef97h#signing",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyiuh3f97hqef97h",
  "keyAgreement": Array [
    Object {
      "controller": "did:3:bafyiuh3f97hqef97h",
      "id": "did:3:bafyiuh3f97hqef97h#encryption",
      "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
      "type": "X25519KeyAgreementKey2019",
    },
  ],
  "publicKey": Array [
    Object {
      "controller": "did:3:bafyiuh3f97hqef97h",
      "id": "did:3:bafyiuh3f97hqef97h#signing",
      "publicKeyHex": "03fff18103bdca9458e73cca5f0a0f64964312d686712f2190bf5b4794c6e29924",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "controller": "did:3:bafyiuh3f97hqef97h",
      "id": "did:3:bafyiuh3f97hqef97h#encryption",
      "publicKeyBase64": "N2/yXOxq8FCX4zzht8JQA3ftVRl+6C39CeU82eFB4Ug=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "service": Array [
    Object {
      "id": "did:3:bafyiuh3f97hqef97h#idx",
      "serviceEndpoint": "ceramic://rootId",
      "type": "IdentityIndexRoot",
    },
  ],
}
`;

exports[`3ID DID Resolver resolver works correctly (old format) 1`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyiuh3f97hqef97h#signing",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyiuh3f97hqef97h",
  "keyAgreement": Array [],
  "publicKey": Array [
    Object {
      "controller": "did:3:bafyiuh3f97hqef97h",
      "id": "did:3:bafyiuh3f97hqef97h#signing",
      "publicKeyHex": "fake signing key",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "controller": "did:3:bafyiuh3f97hqef97h",
      "id": "did:3:bafyiuh3f97hqef97h#encryption",
      "publicKeyBase64": "fake encryption key",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
}
`;

exports[`3ID DID Resolver resolves 3id document correctly 1`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyiuh3f97hqef97h#signing",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyiuh3f97hqef97h",
  "keyAgreement": Array [
    Object {
      "controller": "did:3:bafyiuh3f97hqef97h",
      "id": "did:3:bafyiuh3f97hqef97h#encryption",
      "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
      "type": "X25519KeyAgreementKey2019",
    },
  ],
  "publicKey": Array [
    Object {
      "controller": "did:3:bafyiuh3f97hqef97h",
      "id": "did:3:bafyiuh3f97hqef97h#signing",
      "publicKeyHex": "03fff18103bdca9458e73cca5f0a0f64964312d686712f2190bf5b4794c6e29924",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "controller": "did:3:bafyiuh3f97hqef97h",
      "id": "did:3:bafyiuh3f97hqef97h#encryption",
      "publicKeyBase64": "N2/yXOxq8FCX4zzht8JQA3ftVRl+6C39CeU82eFB4Ug=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
}
`;
